...

  @override
  Widget build(BuildContext context) {
    final userState = Provider.of<UserState>(context);
    return Scaffold(
      appBar: AppBar(
        title: const Text('Profile'),
        actions: [
          PopupMenuButton<String>(
            key: const Key('popupMenuButton'),
            onSelected: (String value) {
              if (value == 'Edit Profile') {
                Navigator.push(
...
                    ),
                    ListTile(
                      title: const Text('Email', style: const TextStyle(fontWeight: FontWeight.bold)),
                      subtitle: Text(userState.email),
                    ),
                    ElevatedButton(
                      key: const Key('viewPostsButton'),
                      style: ElevatedButton.styleFrom(
                        backgroundColor: Colors.grey[350],
                        foregroundColor: Colors.lightBlue,
                      ),
                      onPressed: () {
                        Navigator.push(
...
