...
              controller: passwordController,
              decoration: const InputDecoration(labelText: 'Password'),
              obscureText: true,
            ),
            const SizedBox(height: 20),
            ElevatedButton(
              key: const Key('submitLoginButton'),
              onPressed: login,
              child: const Text('Login'),
            ),
          ],
        ),
      ),
...
