...
              style: const TextStyle(fontSize: 24),
            ),
            Expanded(
              child: ListView(
                children: [
                  ListTile(
                    title: const Text('Username'),
                    subtitle: Text(userState.username),
                  ),
                  ListTile(
                    title: const Text('Email'),
                    subtitle: Text(userState.email),
                  ),
...
